--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "@custom-ai-assistant/server",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -7,13 +7,16 @@
     "co": "sui-mono commit",
     "docker": "docker-compose up -d",
     "start": "node dist/index.js --trace-sync-io",
-    "build": "tsc -p .",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "generate:sdk": "npx @openapitools/openapi-generator-cli generate -i open-api-docs.yaml -g typescript-axios -o ../sdk"
   },
   "author": "Sneyder Angulo",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
@@ -24,6 +27,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.7.0",
     "@s-ui/mono": "^2.35.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.2",
