--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
+    "typeRoots": ["./src/types", "./node_module/@types"]
   },
   "include": [
     "src"
