chore(Root): Change type to ESM and refactor file names

--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "1.1.0",
   "description": "",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "co": "sui-mono commit",
     "docker": "docker-compose up -d",
     "start": "node dist/index.js --trace-sync-io",
     "build": "tsc",
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node-esm src/index.ts",
     "generate:sdk": "npx @openapitools/openapi-generator-cli generate -i open-api-docs.yaml -g typescript-axios -o ../sdk"
   },
   "author": "Sneyder Angulo",
   "license": "ISC",
   "repository": "https://github.com/Sneyder2328/custom-ai-assistant-server.git",
   "dependencies": {
+    "@pinecone-database/pinecone": "^0.1.6",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -22,6 +24,8 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "firebase-admin": "^11.10.0",
+    "formidable": "^3.5.0",
+    "langchain": "^0.0.127",
     "mysql2": "^3.5.1",
     "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
