--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "start": "node dist/index.js --trace-sync-io",
     "build": "tsc",
     "dev": "nodemon --exec ts-node-esm src/index.ts",
-    "generate:sdk": "npx @openapitools/openapi-generator-cli generate -i open-api-docs.yaml -g typescript-axios -o ../sdk"
+    "generate:sdk": "npx @openapitools/openapi-generator-cli generate -i open-api-docs.yaml -g typescript-axios -o ../sdk",
+    "generate:route:new": "node ./node_modules/@sneyder2328/custom-ai-assistant-generator/dist/src/index.js gen route new"
   },
   "author": "Sneyder Angulo",
   "license": "ISC",
   "repository": "https://github.com/Sneyder2328/custom-ai-assistant-server.git",
   "dependencies": {
     "@pinecone-database/pinecone": "^0.1.6",
+    "@sneyder2328/custom-ai-assistant-generator": "npm:@Sneyder2328/custom-ai-assistant-generator@^1.3.0",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -27,6 +29,7 @@
     "formidable": "^3.5.0",
     "langchain": "^0.0.127",
     "mysql2": "^3.5.1",
+    "pdf-parse": "^1.1.1",
     "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
     "uuid": "^9.0.0"
